# x-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/x_scraper/: __init__.py  bird_client.py  cli.py  config.py  cookie_extractor.py  models.py  scraper.py  utils.py
tests/: conftest.py  test_bird_client.py  test_utils.py
